@@ -1,7 +1,6 @@
 package internals;
 
 import java.io.File;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -23,107 +22,113 @@ public class FileProcessor {
 	private final static ForkJoinPool POOL = new ForkJoinPool();
 
 	private Set<String> allFilenames;
-
+	private String[] files;
+	private MutInt numFiles;
+	
 	public FileProcessor() {
 		allFilenames = new HashSet<String>();
+		files = new File(".").list();
+		numFiles = new MutInt();
 		initAllFiles();
 	}
 
 	private void initAllFiles() {
-		File[] files = new File(".").listFiles();
-		POOL.invoke(new ClassListingTask(files, allFilenames, 0, files.length, ""));
-		// TODO
-		// inefficent second pass, but surefire way to clog null or "disappearing" classes for small class sizes FOR NOW
-		POOL.invoke(new ClassListingTask(files, allFilenames, 0, files.length, ""));
+		POOL.invoke(new WhiteOutTask(files, 0, files.length, "", false, numFiles, true));
+		System.out.println(numFiles);
 	}
 
+	// TODO
 	public List<String> getAllClasses() {
-		return new ArrayList<String>(allFilenames);
+		return Arrays.asList(files);
 	}
 
-	public static class ClassListingTask extends RecursiveAction {
+	public static class WhiteOutTask extends RecursiveAction {
 
 		private static final long serialVersionUID = 1L;
 
-		File[] files;
-		Set<String> newList;
-		List<String> filenames;
+		String[] files;
 		int lo, hi;
+		MutInt vwCount;
+		boolean initRun, purgeKey;
 		String keyword;
 
-		public ClassListingTask(File[] files, Set<String> newList, int lo, int hi, String keyword) {
+		/**
+		 * 
+		 * @param files
+		 * @param lo
+		 * @param hi
+		 * @param keyword
+		 * @param purgeKey
+		 *            if true, any word with the specified keyword will be whited out;
+		 *            if false, any word that doesn't have the specified keyword will be
+		 *            whited
+		 * @param vwCount
+		 *            valid word count; necessary for 2nd pass to pack
+		 * @param initRun
+		 *            if true, uses BLACKLISTED_NAMES to purge any names that have the
+		 *            keyword; if false, doesn't do anything special
+		 */
+		public WhiteOutTask(String[] files, int lo, int hi, String keyword, boolean purgeKey, MutInt vwCount,
+				boolean initRun) {
 			this.files = files;
-			this.newList = newList;
 			this.lo = lo;
 			this.hi = hi;
 			this.keyword = keyword;
-		}
-
-		public ClassListingTask(List<String> filenames, Set<String> newList, int lo, int hi, String keyword) {
-			this.filenames = filenames;
-			this.newList = newList;
-			this.lo = lo;
-			this.hi = hi;
-			this.keyword = keyword;
+			this.purgeKey = purgeKey;
+			this.vwCount = vwCount;
+			this.initRun = initRun;
 		}
 
 		@Override
 		protected void compute() {
 			if (hi - lo == 1) {
-				if (files != null) { // indicates this is a call from the constructor of FP
-					if (!files[lo].getName().startsWith(".")) {
-
-						RecursiveAction[] branches = new RecursiveAction[BLACKLISTED_NAMES.size() - 1];
-						Set<String> testList = new HashSet<>();
-						List<String> singleFilename = Arrays.asList(files[lo].getName());
-						boolean blacklisted = false;
+				if (!files[lo].startsWith(".")) {
+					if (initRun) {
+						WhiteOutTask[] branches = new WhiteOutTask[BLACKLISTED_NAMES.size()];
 						for (int i = 0; i < BLACKLISTED_NAMES.size() - 1; i++) {
-							branches[i] = new ClassListingTask(singleFilename, testList, 0, 1,
-									BLACKLISTED_NAMES.get(i));
+							// initRun should be false, or else infinite loop
+							branches[i] = new WhiteOutTask(files, lo, lo + 1, BLACKLISTED_NAMES.get(i), true, vwCount,
+									false);
 							branches[i].fork();
 						}
-						new ClassListingTask(singleFilename, testList, 0, 1,
-								BLACKLISTED_NAMES.get(BLACKLISTED_NAMES.size() - 1)).compute();
+						new WhiteOutTask(files, lo, lo + 1, BLACKLISTED_NAMES.get(BLACKLISTED_NAMES.size() - 1), true,
+								vwCount, false).compute();
 
 						for (int i = 0; i < BLACKLISTED_NAMES.size(); i++) {
-							if (!testList.isEmpty()) { // the filename does NOT contain the blacklisted name
-								blacklisted = true;
-								break;
-							}
-							
 							if (i != BLACKLISTED_NAMES.size() - 1) {
 								branches[i].join();
 							}
 						}
-
-						if (!blacklisted && files[lo] != null) {
-							newList.add(files[lo].getName());
+						
+						if (!files[lo].equals("")) {
+							vwCount.inc();
+						}
+					} else {
+						if (purgeKey) {
+							if (files[lo].contains(keyword)) {
+								files[lo] = "";
+							}
 						}
 					}
 
 				} else {
-					if (filenames.get(lo).contains(keyword) && filenames.get(lo) != null) {
-						newList.add(filenames.get(lo));
-					}
+					files[lo] = "";
 				}
+
 			} else if (hi - lo != 0) {
 				int mid = lo + (hi - lo) / 2;
 
-				ClassListingTask left = null;
-				ClassListingTask right = null;
+				WhiteOutTask left = null;
+				WhiteOutTask right = null;
 
-				if (files == null) {
-					left = new ClassListingTask(filenames, newList, lo, mid, keyword);
-					right = new ClassListingTask(filenames, newList, mid, hi, keyword);
-
-				} else {
-					left = new ClassListingTask(files, newList, lo, mid, keyword);
-					right = new ClassListingTask(files, newList, mid, hi, keyword);
-				}
+				left = new WhiteOutTask(files, lo, mid, keyword, false, vwCount, initRun);
+				right = new WhiteOutTask(files, mid, hi, keyword, false, vwCount, initRun);
 
 				left.fork();
 				right.compute();
 				left.join();
+				
+				System.out.println(vwCount.val);
 
 			}
 		}
@@ -139,6 +144,33 @@ public class FileProcessor {
 	}
 
 	public int numClasses() {
-		return this.allFilenames.size();
+		return numFiles.val;
+	}
+
+	private class MutInt {
+		private int val;
+		
+		public MutInt() {
+			this.val = 0;
+		}
+		
+		public MutInt(int val) {
+			this.val = val;
+		}
+		
+		MutInt inc() {
+			val++;
+			return new MutInt(val);
+		}
+		
+		 MutInt dec() {
+			val--;
+			return new MutInt(val);
+		}
+		
+		MutInt add(MutInt other) {
+			val += other.val;
+			return new MutInt(val);
+		}
 	}
 }
