@@ -9,6 +9,11 @@ TODO: unimportant input to lowercase (so far this hasn't been important, but the
 
 TODO: recently discovered issue where some files listed show up as null; might wanna check that out without doing a second pass
 
+1/31/2019
+- Isaac discovers .list() and wonders why he didn't know of its existence until now
+- stage 1 of 2 of FileProcessor overhaul
+	note to self: ints and integers are immutable
+
 1/28/2019
 - motivated (pressured?) myself into picking it back up and making at _least_ 
 the quizzing section viable with the coming wave of midterms soon to come
